...
class AppDelegate: UIResponder, UIApplicationDelegate {

    var window: UIWindow?
    
    func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {
        
        let nav = UINavigationController()
        nav.title = "nav"
        let vc = ViewController()
        let svc = secondaryVC()
        svc.title = "svc"
        let mainVC = UITabBarController()
        nav.viewControllers = [vc]
...
